tests/NormalTests/paczka1/small_fuzzy/80965161.err
Error in line 3: EKU9BVl A569 -3,1
Error in line 2: A905 A852 73,5
Error in line 1: EKU9BVl A569 47,8
